// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField should render correctly 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:hover,
.css-16jruyc:focus {
  border-color: #4f0599;
}

.css-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.css-16jruyc::-moz-placeholder {
  opacity: 1;
}

.css-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.css-16jruyc::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-16jruyc eoko61b2"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-4sr5xp {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  color: #c4c9d6;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-4sr5xp::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-4sr5xp::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-4sr5xp:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-4sr5xp::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-4sr5xp:hover,
.css-4sr5xp:focus {
  border-color: #4f0599;
}

.css-4sr5xp:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-4sr5xp::-webkit-input-placeholder {
  opacity: 1;
}

.css-4sr5xp::-moz-placeholder {
  opacity: 1;
}

.css-4sr5xp:-ms-input-placeholder {
  opacity: 1;
}

.css-4sr5xp::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-4sr5xp eoko61b2"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly generated 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:hover,
.css-16jruyc:focus {
  border-color: #4f0599;
}

.css-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.css-16jruyc::-moz-placeholder {
  opacity: 1;
}

.css-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.css-16jruyc::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-16jruyc eoko61b2"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly id 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:hover,
.css-16jruyc:focus {
  border-color: #4f0599;
}

.css-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.css-16jruyc::-moz-placeholder {
  opacity: 1;
}

.css-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.css-16jruyc::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-16jruyc eoko61b2"
          id="id"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly notice 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:hover,
.css-16jruyc:focus {
  border-color: #4f0599;
}

.css-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.css-16jruyc::-moz-placeholder {
  opacity: 1;
}

.css-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.css-16jruyc::placeholder {
  opacity: 1;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

.css-1gf8r99 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 8px;
}

.css-18ug5yg-sizeStyles {
  vertical-align: middle;
  fill: #b2b6c3;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.css-1p6ku8i {
  color: #b2b6c3;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-16jruyc eoko61b2"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
      <div
        class="eoko61b3 css-1gf8r99 e1sgck4o0"
      >
        <svg
          class="css-18ug5yg-sizeStyles etwatq50"
          viewBox="0 0 24 24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
        <p
          class="css-1p6ku8i e1tg3t120"
        >
          notice
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly random 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-z48xia {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.css-z48xia::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-z48xia::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-z48xia:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-z48xia::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-z48xia:hover,
.css-z48xia:focus {
  border-color: #4f0599;
}

.css-z48xia:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-z48xia::-webkit-input-placeholder {
  opacity: 1;
}

.css-z48xia::-moz-placeholder {
  opacity: 1;
}

.css-z48xia:-ms-input-placeholder {
  opacity: 1;
}

.css-z48xia::placeholder {
  opacity: 1;
}

.css-1i1cu7n-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.css-1i1cu7n-StyledRightElement:hover,
.css-1i1cu7n-StyledRightElement:focus-within {
  color: #4a4f62;
}

.css-1i1cu7n-StyledRightElement>button {
  box-shadow: none!important;
}

.css-b79aqv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 24px;
}

.css-ko0ora-StyledButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.css-ko0ora-StyledButton:hover,
.css-ko0ora-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-ko0ora-StyledButton>svg {
  pointer-events: none;
}

.css-zy3rt6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.css-kv8vgz-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-z48xia eoko61b2"
          name="test"
          type="text"
          value=""
        />
        <div
          class="css-1i1cu7n-StyledRightElement eoko61b7"
        >
          <div
            class="css-b79aqv eoko61b1"
          >
            <button
              aria-disabled="false"
              class="css-ko0ora-StyledButton em6gco80"
              title="Randomize"
              type="button"
            >
              <div
                class="css-zy3rt6 em6gco81"
              >
                <svg
                  class="css-kv8vgz-sizeStyles etwatq50"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly required 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.css-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-16jruyc:hover,
.css-16jruyc:focus {
  border-color: #4f0599;
}

.css-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.css-16jruyc::-moz-placeholder {
  opacity: 1;
}

.css-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.css-16jruyc::placeholder {
  opacity: 1;
}

.css-1wiwt43-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.css-1wiwt43-StyledRightElement:hover,
.css-1wiwt43-StyledRightElement:focus-within {
  color: #4a4f62;
}

.css-7wqnxk-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.css-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-16jruyc eoko61b2"
          name="test"
          type="text"
          value=""
        />
        <div
          class="css-1wiwt43-StyledRightElement eoko61b7"
        >
          <svg
            class="css-7wqnxk-sizeStyles etwatq50"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-1lt3r2p e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly with minLength 1`] = `
<DocumentFragment>
  .css-bjn8wh {
  position: relative;
}

.css-1l46zoq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #dd3252;
}

.css-1l46zoq::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-1l46zoq::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-1l46zoq:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-1l46zoq::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.css-1l46zoq:hover,
.css-1l46zoq:focus {
  border-color: #4f0599;
}

.css-1l46zoq:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.css-1l46zoq::-webkit-input-placeholder {
  opacity: 1;
}

.css-1l46zoq::-moz-placeholder {
  opacity: 1;
}

.css-1l46zoq:-ms-input-placeholder {
  opacity: 1;
}

.css-1l46zoq::placeholder {
  opacity: 1;
}

.css-1l46zoq:hover,
.css-1l46zoq:focus {
  border-color: #a6102d;
}

.css-1l46zoq:focus {
  box-shadow: 0px 0px 0px 3px #DD325240;
  border-color: #a6102d;
}

.css-1k0oiux {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: initial;
}

.css-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="css-bjn8wh eoko61b5"
      >
        <input
          autocomplete="on"
          class="css-1l46zoq eoko61b2"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="css-1k0oiux e14o3tsk0"
      >
        <div
          class="css-1rshnsu eoko61b4"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
